--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <div class="design">
         <div class="image">
-            <img src="../kaspar/images/mobile.png" alt="design-features">
+            <img src="images/mobile.png" alt="design-features">
         </div>
         <div class="text">
             <h2>Our design comes with...</h2>
@@ -155,56 +155,56 @@
         <div class="imgs-container">
 
             <div class="box">
-                <img src="../kaspar/images/shuffle-01.jpg" alt="">
+                <img src="images/shuffle-01.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="../kaspar/images/shuffle-02.jpg" alt="">
+                <img src="images/shuffle-02.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="../kaspar/images/shuffle-03.jpg" alt="">
+                <img src="images/shuffle-03.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="../kaspar/images/shuffle-04.jpg" alt="">
+                <img src="images/shuffle-04.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="../kaspar/images/shuffle-05.jpg" alt="">
+                <img src="images/shuffle-05.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="../kaspar/images/shuffle-06.jpg" alt="">
+                <img src="images/shuffle-06.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="../kaspar/images/shuffle-07.jpg" alt="">
+                <img src="images/shuffle-07.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
                 </div>
             </div>
             <div class="box">
-                <img src="../kaspar/images/shuffle-08.jpg" alt="">
+                <img src="images/shuffle-08.jpg" alt="">
                 <div class="text">
                     <h4>Awesome Image</h4>
                     <p>photography</p>
@@ -217,7 +217,7 @@
 
     <!-- Start Video -->
     <div class="video">
-        <video class="aws-video" loop muted autoplay src="../kaspar/images/awesome-video.mp4"></video>
+        <video class="aws-video" loop muted autoplay src="images/awesome-video.mp4"></video>
         <div class="text">
             <h2>super awesome video here</h2>
             <p>Its all you need</p>
