--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Render All Element Normal -->
-    <link rel="stylesheet" href="../Kaspar/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../Kaspar/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- My Css File -->
-    <link rel="stylesheet" href="../Kaspar/css/kasper.css">
+    <link rel="stylesheet" href="css/kasper.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
