--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
             </div>
             <div class="image">
-                <img src="../kaspar/images/about.png" alt="">
+                <img src="images/about.png" alt="">
             </div>
         </div>
     </div>
