add new section

--- a/index.html
+++ b/index.html
@@ -276,6 +276,63 @@
         </div>
     </div>
     <!-- End stats -->
+    <!-- Start Skills -->
+    <div class="skills-section">
+        <div class="container">
+            <!-- Start Testimontals -->
+            <div class="testimonials">
+                <h3>Testimonials</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                <div class="box">
+                    <img src="images/skills-01.jpg" alt="">
+                    <div>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                        <p>John Doe,CEO</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/skills-02.jpg" alt="">
+                    <div>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
+                        <p>John Doe,CEO</p>
+                    </div>
+                </div>
+                <ul class="bullets-skills">
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                </ul>
+            </div>
+            <!-- End Testimontals -->
+            <!-- <span class="line"></span> -->
+            <!-- Start Skills -->
+            <div class="skills">
+                <h3>Skills</h3>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                <div class="prog-container">
+                    <h4>adobe</h4>
+                    <div class="prog">
+                        <span style="width: 95%; " data-progress="95%"></span>
+                    </div>
+                    <h4> Html &amp; Css</h4>
+                    <div class="prog">
+                        <span style="width: 93%; " data-progress="93%"></span>
+                    </div>
+                    <h4> JavaScript </h4>
+                    <div class="prog">
+                        <span style="width: 85%; " data-progress="85%"></span>
+                    </div>
+                    <h4>Php</h4>
+                    <div class="prog">
+                        <span style="width: 87%; " data-progress="87%"></span>
+                    </div>
+                </div>
+            </div>
+            <!-- End Skills -->
+
+        </div>
+    </div>
+
+
+
 </body>
 
 </html>
