make two sections

--- a/index.html
+++ b/index.html
@@ -326,10 +326,106 @@
                     </div>
                 </div>
             </div>
-            <!-- End Skills -->
+        </div>
+    </div>
+    <!-- End Skills -->
+    <!--Start Quote -->
+
+    <div class="quote">
+        <div class="container">
+            <q>ACCUMSAN ID CURABITUR ET PORTITOR MAURIS BLANDIT DOLOR LOREM SOME
+                EST OUR DONEC STIN LORTIOS</q>
+            <span>John Doe</span>
 
         </div>
     </div>
+
+    <!-- End Quote -->
+    <!-- Start Pricing -->
+    <div class="pricing">
+        <div class="container">
+            <div class="special-heading">
+                <h2>Pricing</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </div>
+            <div class="plans">
+                <div class="plan">
+                    <div class="head">
+                        <h3>basic</h3>
+                        <span>19</span>
+                    </div>
+                    <ul class="features">
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <a href="#" class="buy-link">Buy Now</a>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Premium</h3>
+                        <span>29</span>
+                    </div>
+                    <ul class="features">
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <a href="#" class="buy-link">Buy Now</a>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Pro</h3>
+                        <span>39</span>
+                    </div>
+                    <ul class="features">
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <a href="#" class="buy-link">Buy Now</a>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Platinum</h3>
+                        <span>49</span>
+                    </div>
+                    <ul class="features">
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <a href="#" class="buy-link">Buy Now</a>
+                </div>
+            </div>
+            <div class="contact">
+                <h3>Contact us if you have special request</h3>
+                <a href="#" class="contact">Contact Us</a>
+            </div>
+        </div>
+
+    </div>
+    <!-- End Pricing -->
+    <!-- Start Subscribe -->
+    <div class="subscribe">
+        <div class="container">
+            <div class="sub">
+                <input type="email" placeholder="your mail">
+                <i class="far fa-envelope"></i>
+                <a href="#">Subscribe</a>
+            </div>
+            <div class="text">
+                <p>
+                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- End Subscribe -->
 
 
 
